# m3u8_downer

./: .gitignore  Cargo.toml
plugin/chrome/: background.js  content.js  hot-reload.js  manifest.json  popup.html  popup.js
src/: main.rs  ttt.rs  worker.rs
